--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -8,5 +8,7 @@ $white-faded: rgba(white, 0.8);
 $gray-light: #eee;
 
 // - Responsive breakpoints
+$bp-xl: 1200px;
 $bp-lg: 992px;
 $bp-md: 768px;
+$bp-sm: 576px;
