--- a/_sass/bootstrap-lite.scss
+++ b/_sass/bootstrap-lite.scss
@@ -14,11 +14,11 @@
 @import "bootstrap/images";
 @import "bootstrap/code";
 @import "bootstrap/grid";
-@import "bootstrap/tables";
+//@import "bootstrap/tables";
 @import "bootstrap/forms";
 @import "bootstrap/buttons";
 @import "bootstrap/transitions";
-@import "bootstrap/dropdown";
+//@import "bootstrap/dropdown";
 //@import "bootstrap/button-group";
 @import "bootstrap/input-group";
 @import "bootstrap/custom-forms";
@@ -26,7 +26,7 @@
 @import "bootstrap/navbar";
 //@import "bootstrap/card";
 //@import "bootstrap/breadcrumb";
-@import "bootstrap/pagination";
+//@import "bootstrap/pagination";
 //@import "bootstrap/badge";
 //@import "bootstrap/jumbotron";
 @import "bootstrap/alert";
