--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -1,14 +1,8 @@
 footer {
 	padding: 50px 0 65px;
 	.list-inline {
-		// Override inlined CSS that hides this
-		display: flex !important;
+		list-style: none;
 		margin: 0;
 		padding: 0;
-	}
-	.copyright {
-		font-size: 14px;
-		text-align: center;
-		margin-bottom: 0;
 	}
 }
