--- a/css/style.scss
+++ b/css/style.scss
@@ -10,13 +10,13 @@
 @import "mixins";
 
 // Global Components
-//@import "global";
+@import "global";
 // Typography
-//@import "typography";
+@import "typography";
 // Navigation
-//@import "navbar";
+@import "navbar";
 // Intro header
-//@import "intro-header";
+@import "intro-header";
 // Posts
 @import "posts";
 // Footer
